LiveSite/css/index.css
.version.index /* version checker */
{
	color: #0000F4;
	background-color: #1C70DD;
}

.html
{
	background-color: #FFFFFF;
}

#page
{
	z-index: 1;
	width: 960px;
	min-height: 3905px;
	background-image: none;
	border-style: none;
	border-color: #000000;
	background-color: transparent;
	margin-left: auto;
	margin-right: auto;
}

#page_position_content
{
	padding-bottom: 130px;
	width: 0.01px;
}

#u124
{
	z-index: 352;
	height: 111px;
	background-color: #000000;
}

#u124-bw
{
	z-index: 352;
	position: fixed;
	left: 0px;
	right: 0px;
	top: -36px;
}

#home
{
	position: relative;
}

#u149
{
	z-index: 357;
	width: 48px;
	background-color: transparent;
	position: fixed;
	top: 20px;
	left: 20px;
}

#u132-4
{
	z-index: 353;
	width: 274px;
	min-height: 25px;
	background-color: transparent;
	color: #FFFFFF;
	line-height: 37px;
	font-size: 31px;
	font-family: asap, sans-serif;
	font-weight: 700;
	position: fixed;
	top: 21px;
	left: 79px;
}

#u743
{
	z-index: 378;
	width: 31px;
	background-color: transparent;
	position: fixed;
	top: 21px;
	left: 380px;
}

#u158-4
{
	z-index: 363;
	width: 84px;
	min-height: 31px;
	background-color: transparent;
	color: #FFFFFF;
	line-height: 28px;
	text-align: left;
	font-size: 23px;
	font-family: asap, sans-serif;
	font-weight: 400;
	position: fixed;
	top: 21px;
	left: 416px;
}

#u751
{
	z-index: 380;
	width: 31px;
	background-color: transparent;
	position: fixed;
	top: 21px;
	left: 536px;
}

#u749-4
{
	z-index: 367;
	width: 161px;
	min-height: 31px;
	background-color: transparent;
	color: #FFFFFF;
	line-height: 28px;
	text-align: left;
	font-size: 23px;
	font-family: asap, sans-serif;
	font-weight: 400;
	position: fixed;
	top: 21px;
	left: 572px;
}

#u868
{
	z-index: 382;
	width: 31px;
	background-color: transparent;
	position: fixed;
	top: 20px;
	left: 761px;
}

#u750-4
{
	z-index: 371;
	width: 144px;
	min-height: 31px;
	background-color: transparent;
	color: #FFFFFF;
	line-height: 28px;
	text-align: left;
	font-size: 23px;
	font-family: asap, sans-serif;
	font-weight: 400;
	position: fixed;
	top: 20px;
	left: 796px;
}

#u156-4
{
	z-index: 359;
	width: 112px;
	min-height: 27px;
	background-color: transparent;
	color: #FFFFFF;
	line-height: 12px;
	text-align: left;
	font-size: 10px;
	font-family: asap, sans-serif;
	font-weight: 400;
	position: fixed;
	top: 58px;
	left: 79px;
}

#u161
{
	z-index: 375;
	width: 43px;
	height: 2px;
	background-color: #FFFFFF;
	position: fixed;
	top: 61px;
	left: 418px;
}

#u162
{
	z-index: 376;
	width: 43px;
	height: 2px;
	background-color: #FFFFFF;
	position: fixed;
	top: 58px;
	left: 613px;
}

#u163
{
	z-index: 377;
	width: 43px;
	height: 2px;
	background-color: #FFFFFF;
	position: fixed;
	top: 59px;
	left: 825px;
}

#u114
{
	z-index: 385;
	width: 50px;
	min-height: 25px;
	border-style: none;
	border-color: transparent;
	background-color: transparent;
	left: -179px;
	margin-top: 67px;
	position: relative;
}

#u75
{
	z-index: 384;
	width: 60px;
	min-height: 64px;
	border-style: none;
	border-color: transparent;
	background-color: transparent;
	left: -184px;
	margin-top: 49px;
	position: relative;
}

#u82-4
{
	z-index: 293;
	width: 248px;
	min-height: 41px;
	background-color: transparent;
	line-height: 48px;
	text-align: center;
	font-size: 40px;
	font-family: asap, sans-serif;
	font-weight: 700;
	margin-left: 356px;
	margin-top: 14px;
	position: relative;
}

#u170
{
	z-index: 301;
	width: 170px;
	height: 1px;
	background-color: #7F7F7F;
	margin-left: 390px;
	position: relative;
}

#u168-4
{
	z-index: 297;
	width: 351px;
	min-height: 63px;
	background-color: transparent;
	line-height: 24px;
	text-align: center;
	font-size: 20px;
	font-family: asap, sans-serif;
	font-weight: 400;
	margin-left: 305px;
	margin-top: 7px;
	position: relative;
}

#pu695
{
	width: 0.01px;
	margin-left: -19px;
	margin-top: 54px;
}

#u695
{
	z-index: 205;
	width: 241px;
	min-height: 245px;
	border-style: none;
	border-color: transparent;
	background-color: transparent;
	position: relative;
	margin-right: -10000px;
}

#u697
{
	z-index: 206;
	width: 317px;
	min-height: 245px;
	border-style: none;
	border-color: transparent;
	background-color: transparent;
	position: relative;
	margin-right: -10000px;
	left: 604px;
}

#u171-4
{
	z-index: 302;
	width: 226px;
	min-height: 40px;
	background-color: transparent;
	line-height: 24px;
	text-align: center;
	font-size: 20px;
	font-family: asap, sans-serif;
	font-weight: 400;
	position: relative;
	margin-right: -10000px;
	margin-top: 107px;
	left: 386px;
}

#u172
{
	z-index: 306;
	width: 39px;
	background-color: transparent;
	position: relative;
	margin-right: -10000px;
	margin-top: 147px;
	left: 479px;
}

#one
{
	margin-left: 20px;
	margin-top: 84px;
	position: relative;
}

#pu940
{
	width: 0.01px;
	margin-left: 132px;
	margin-top: 135px;
}

#u940
{
	z-index: 2;
	width: 59px;
	min-height: 56px;
	border-style: none;
	border-color: transparent;
	background-color: transparent;
	position: relative;
	margin-right: -10000px;
	margin-top: 205px;
	left: 110px;
}

#u874
{
	z-index: 111;
	width: 60px;
	background-color: transparent;
	position: relative;
	margin-right: -10000px;
}

#u1011
{
	z-index: 209;
	width: 752px;
	background-color: transparent;
	opacity: 0.47;
	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=47)";
	filter: alpha(opacity=47);
	position: relative;
	margin-right: -10000px;
	margin-top: 24px;
}

#u185
{
	z-index: 211;
	width: 250px;
	min-height: 336px;
	border-style: none;
	border-color: transparent;
	background-color: transparent;
	position: relative;
	margin-right: -10000px;
	margin-top: 119px;
	left: 558px;
}

#u81-4
{
	z-index: 212;
	width: 440px;
	min-height: 32px;
	background-color: transparent;
	line-height: 36px;
	font-size: 30px;
	font-family: asap, sans-serif;
	font-weight: 700;
	position: relative;
	margin-right: -10000px;
	margin-top: 24px;
	left: 72px;
}
/* ... */

